<resources>
    <string name="app_name">RoomInn</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- FaceBook login need these strings:   -->
    <string name="facebook_app_id">895406741376685</string>
    <string name="fb_login_protocol_scheme">fb895406741376685</string>
    <string name="color">color:</string>
    <string name="enable_free_scaling">enable free scaling</string>
    <string name="edit_furniture">Edit furniture:</string>
    <string name="width">width:</string>
    <string name="height">height:</string>
    <string name="todo">TODO</string>
    <string name="location">location:</string>
    <string name="rotation_angel">Rotation angel:</string>

    <string name="my_ScreenShoot">FlorePlane</string>

    <string name="game_view_content_description" translatable="false">Game view</string>
    <string name="name_this_project">Name this project</string>

</resources>