<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/dosis_medium"
        android:gravity="center"
        android:text="@string/edit_furniture"
        android:textColor="@color/dark_purple"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <postpc.finalproject.RoomInn.FurnitureCanvas
        android:id="@+id/furniture_img"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/edit_title"
        app:layout_constraintStart_toStartOf="@id/edit_title"
        app:layout_constraintTop_toBottomOf="@id/edit_title" />


    <TextView
        android:id="@+id/color_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dosis_medium"
        android:text="@string/color"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/edit_title"
        app:layout_constraintStart_toStartOf="@id/edit_title"
        app:layout_constraintTop_toBottomOf="@id/furniture_img" />

    <ImageView
        android:id="@+id/color_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/color_text"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@id/color_text"
        app:layout_constraintTop_toTopOf="@id/color_text"
        app:tint="@color/dark_blue" />

    <TextView
        android:id="@+id/width_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dosis_medium"
        android:text="@string/width"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@id/color_text"
        app:layout_constraintTop_toBottomOf="@id/color_text" />

    <EditText
        android:id="@+id/width_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:inputType="number"
        android:text="267"
        app:layout_constraintBottom_toBottomOf="@id/width_text"
        app:layout_constraintStart_toEndOf="@id/width_text"
        app:layout_constraintTop_toTopOf="@id/width_text" />

    <TextView
        android:id="@+id/length_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dosis_medium"
        android:text="length: "
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@id/color_text"
        app:layout_constraintTop_toBottomOf="@id/width_text" />

    <EditText
        android:id="@+id/length_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:inputType="number"
        android:text="267"
        app:layout_constraintBottom_toBottomOf="@id/length_text"
        app:layout_constraintStart_toEndOf="@id/length_text"
        app:layout_constraintTop_toTopOf="@id/length_text" />

    <TextView
        android:id="@+id/height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dosis_medium"
        android:text="@string/height"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@id/color_text"
        app:layout_constraintTop_toBottomOf="@id/length_text" />

    <EditText
        android:id="@+id/heigh_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:inputType="number"
        android:text="267"
        app:layout_constraintBottom_toBottomOf="@id/height_text"
        app:layout_constraintStart_toEndOf="@id/height_text"
        app:layout_constraintTop_toTopOf="@id/height_text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/rotate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dosis_medium"
        android:text="@string/rotation_angel"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@id/color_text"
        app:layout_constraintTop_toBottomOf="@id/height_text" />

    <EditText
        android:id="@+id/rotate_inner_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:inputType="number"
        android:text="000"
        app:layout_constraintBottom_toBottomOf="@id/rotate_text"
        app:layout_constraintStart_toEndOf="@id/rotate_text"
        app:layout_constraintTop_toTopOf="@id/rotate_text"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/rotate_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_baseline_rotate_90_degrees_cw_24"
        app:layout_constraintBottom_toBottomOf="@id/rotate_inner_text"
        app:layout_constraintStart_toEndOf="@id/rotate_inner_text"
        app:layout_constraintTop_toTopOf="@id/rotate_inner_text" />




    <CheckBox
        android:id="@+id/enable_ratio_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enable_free_scaling"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/color_text"
        app:layout_constraintTop_toBottomOf="@id/rotate_text" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_outline_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/delete_fab"
        app:layout_constraintTop_toBottomOf="@id/enable_ratio_checkbox" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_delete_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/save_fab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enable_ratio_checkbox" />


</androidx.constraintlayout.widget.ConstraintLayout>